Bug 1063726 - Define MALLOC_H like top-level configure.in. r=ted